--- a/index.html
+++ b/index.html
@@ -22,19 +22,23 @@
             <div class="box-two">
                 <h2>Summary</h2>
                 <div>
-                    <img src="images/icon-reaction.svg" alt=""><p>Reaction</p>
+                    <img src="images/icon-reaction.svg" alt="">
+                    <p>Reaction</p>
                     <span><b>80</b> / 100</span>
                 </div>
                 <div>
-                    <img src="images/icon-memory.svg" alt=""><p>Memory</p>
+                    <img src="images/icon-memory.svg" alt="">
+                    <p>Memory</p>
                     <span><b>92</b> / 100</span>
                 </div>
                 <div>
-                    <img src="images/icon-verbal.svg" alt=""><p>Verbal</p>
+                    <img src="images/icon-verbal.svg" alt="">
+                    <p>Verbal</p>
                     <span><b>61</b> / 100</span>
                 </div>
                 <div>
-                    <img src="images/icon-visual.svg" alt=""><p>Visual</p>
+                    <img src="images/icon-visual.svg" alt="">
+                    <p>Visual</p>
                     <span><b>72</b> / 100</span>
                 </div>
                 <button>Continue</button>
